# point_recorder

./: CMakeLists.txt  package.xml
launch/: point_cloud_decode.launch  point_cloud_recorder.launch
src/: compare_comp_with_origin.cpp  point_cloud_decorder.cpp  point_cloud_recorder.cpp
